@@ -3,7 +3,7 @@
  * Ruby Cairo Binding
  *
  * $Author: kou $
- * $Date: 2008-04-30 04:57:51 $
+ * $Date: 2008-06-19 13:00:18 $
  *
  * Copyright 2005 Øyvind Kolås <pippin@freedesktop.org>
  * Copyright 2004-2005 MenTaLguY <mental@rydia.com>
@@ -18,15 +18,15 @@
 
 #include <cairo.h>
 
-#if CAIRO_HAS_PS_SURFACE
+#ifdef CAIRO_HAS_PS_SURFACE
 #  include <cairo-ps.h>
 #endif
 
-#if CAIRO_HAS_PDF_SURFACE
+#ifdef CAIRO_HAS_PDF_SURFACE
 #  include <cairo-pdf.h>
 #endif
 
-#if CAIRO_HAS_SVG_SURFACE
+#ifdef CAIRO_HAS_SVG_SURFACE
 #  include <cairo-svg.h>
 #endif
 
@@ -210,10 +210,10 @@ VALUE                 rb_cairo_surface_to_ruby_object_with_destroy
 #define RVAL2CRFORMAT(obj)        (rb_cairo_format_from_ruby_object(obj))
 #define RVAL2CREXTEND(obj)        (rb_cairo_extend_from_ruby_object(obj))
 #define RVAL2CRFILTER(obj)        (rb_cairo_filter_from_ruby_object(obj))
-#if CAIRO_HAS_SVG_SURFACE
+#ifdef CAIRO_HAS_SVG_SURFACE
 #define RVAL2CRSVGVERSION(obj)    (rb_cairo_svg_version_from_ruby_object(obj))
 #endif
-#if CAIRO_HAS_PS_SURFACE
+#ifdef CAIRO_HAS_PS_SURFACE
 #  if CAIRO_CHECK_VERSION(1, 5, 2)
 #define RVAL2CRPSLEVEL(obj)       (rb_cairo_ps_level_from_ruby_object(obj))
 #  endif
@@ -234,10 +234,10 @@ cairo_content_t        rb_cairo_content_from_ruby_object        (VALUE obj);
 cairo_format_t         rb_cairo_format_from_ruby_object         (VALUE obj);
 cairo_extend_t         rb_cairo_extend_from_ruby_object         (VALUE obj);
 cairo_filter_t         rb_cairo_filter_from_ruby_object         (VALUE obj);
-#if CAIRO_HAS_SVG_SURFACE
+#ifdef CAIRO_HAS_SVG_SURFACE
 cairo_svg_version_t    rb_cairo_svg_version_from_ruby_object    (VALUE obj);
 #endif
-#if CAIRO_HAS_PS_SURFACE
+#ifdef CAIRO_HAS_PS_SURFACE
 #  if CAIRO_CHECK_VERSION(1, 5, 2)
 cairo_ps_level_t       rb_cairo_ps_level_from_ruby_object       (VALUE obj);
 #  endif
